# mindmemory-client

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  pyproject.toml
docs/: config.example.toml  memory-repo-extended-layout.md  mindmemory-client-设计.md  mmem-使用说明.md
src/mindmemory_client/: __init__.py  agent_workspace.py  api.py  auth_http.py  chat_strings.py  client_home.py  client_paths.py  client_state.py  config.py  credential_source.py  env_loader.py  errors.py  keygen.py  keys.py  llm_profiles.py  logging_config.py  memory_bundle.py  memory_crypto.py  memory_errors.py  memory_schema.py  memory_types.py  ollama_llm.py  openai_chat_llm.py  pnms_bridge.py  pnms_import.py  pnms_inspect.py  private_key_backup.py  register_crypto.py  sync.py  (+5 more)
src/mindmemory_client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_agent_workspace.py  test_chat_strings.py  test_cli_mmem.py  test_client_home.py  test_client_state.py  test_config_from_env.py  test_credential_source.py  test_e2e_remote_mmem.py  test_env_loader.py  test_integration_git_smoke.py  test_large_memory_scenario.py  test_llm_profiles.py  test_logging_config.py  test_memory_bundle.py  test_memory_crypto.py  test_memory_schema.py  test_ollama_llm_messages.py  test_openai_chat_llm.py  test_pnms_import.py  test_pnms_inspect.py  test_private_key_backup.py  test_register_crypto.py  test_sync_git_compare.py  test_sync_manifest.py  test_sync_payload.py  test_workspace_extras.py  test_workspace_prompt.py
tools/: check_agent_workspace_mirror.py
(+10 files in other folders)
